# bot-na-lista

./: .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Procfile  README.md  bot.py  fly.toml  manage.py  requirements-dev.txt  requirements.txt  settings.py  sheet.py
.github/workflows/: deploy.yml  tests.yml
contrib/: db.sh
lista_de_compras/: asgi.py  settings.py  urls.py  wsgi.py
lista_de_compras/core/: apps.py  handler.py  manager.py  models.py
lista_de_compras/core/management/commands/: bot.py
lista_de_compras/core/migrations/: 0001_enable_hstor_ext.py  0002_create_shopping_list_table.py
lista_de_compras/core/tests/test_manager/: __init__.py  test_manager_add_item.py  test_manager_add_person.py  test_manager_init.py  test_manager_remove_item.py  test_manager_remove_person.py  test_manager_view.py  test_manager_who.py
migrations/2024-09-27-161825_create_list/: down.sql  up.sql
migrations/2024-10-11-145759_create_is_empty/: down.sql  up.sql
src/: bot.rs  chat.rs  db.rs  lib.rs  main.rs  maintenance.rs  models.rs  schema.rs  telegram.rs
tests/: chat_list_test.rs  chat_process_input_test.rs  common.rs  maintenance_test.rs
