[package]
name = "bot-na-lista"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
diesel = { version = "2.2.11", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.16.0", features = ["webhooks-axum", "ctrlc_handler"] }
tokio = { version = "1.46.0", features = ["rt-multi-thread", "macros", "fs", "rt"] }
url = "2.5.4"
