[package]
name = "bot-na-lista"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
diesel = { version = "2.3.2", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.17.0", features = ["webhooks-axum", "ctrlc_handler"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "rt"] }
url = "2.5.7"
